--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,19 @@
 name: Deploy Zola site to GitHub Pages
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: 
+ push:
+  branches:
+   - main
+
 
 jobs:
-  deploy:
-    name: Build & Publish Site
+  build:
+    name: Publish site
     runs-on: ubuntu-latest
-
     steps:
-      - name: Fetch repository contents
-        uses: actions/checkout@v4
-
-      - name: Compile and Upload to GitHub Pages
-        uses: shalzz/zola-deploy-action@v0.17.2
-        env:
-          PAGES_BRANCH: gh-pages
-          TOKEN: ${{ secrets.ACESS_TOKEN }}
+    - name: Checkout main
+      uses: actions/checkout@v4
+    - name: Build and deploy
+      uses: shalzz/zola-deploy-action@v0.21.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
